[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "valaw"
version = "0.1.11"
description = "Async Python wrapper for the Official VALORANT API (Riot Games). Fast, typed, and easy to use."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jet612" }]
keywords = ["valorant", "riot-games", "api-wrapper", "python-valorant", "async", "gaming"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]
dependencies = [
    "dataclass_wizard==0.39.1",
    "aiohttp==3.13.3",
]

[project.urls]
Source = "https://github.com/Jet612/valaw"
Documentation = "https://valaw.madebyjet.dev"
"Issue Tracker" = "https://github.com/Jet612/valaw/issues"
"Chat/Support" = "https://discord.gg/mVXpvunBbF"

[project.optional-dependencies]
dev = ["python-dotenv"]

[tool.setuptools.packages.find]
where = ["src"]
